# osu-mapper

./: .gitignore  LICENSE  README.md  agent.py  beatmap_model.pt  log1.txt  main.py  mapper_env.py  pyproject.toml  requirements.txt  reward_function.py  test.py  utils.py
Crawler/: README.md  main.py  pyproject.toml
Mapperatorinator/: inference.py
Mapperatorinator.egg-info/: PKG-INFO  SOURCES.txt
Mapperatorinator/colab/: mapperatorinator_inference.ipynb
Mapperatorinator/osu_diffusion/: __init__.py
configs/: inference.yaml
utils/: beatmap_io.py
